# aioweb3

./: .gitignore  .pylintrc  CHANGELOG.md  makefile  pyproject.toml  setup.cfg
aioweb3/: __init__.py  aioweb3.py  commoncontracts.py  endpoints.py  event.py  exceptions.py  methodcall.py  signer.py  transaction.py  transport.py  types.py  web3mixin.py
tests/integration/: test_aioweb3.py
tests/unit/: logs.json  test_events.py  test_types.py
