[tool.poetry]
name = "aioweb3"
version = "0.2.0"
description = "Asynchronous Web3 client for asyncio and Python"
authors = ["Henry Chen <chendaizhuo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
eth-abi = "^2.1.1"
eth-hash = "^0.3.1"
aiohttp = "^3.7.4"
hexbytes = "^0.2.1"
websockets = ">=9.1"
pydantic = "^1.8.2"
eth-account = "^0.5.5"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
isort = "^5.9.3"
pytest-asyncio = "^0.15.1"
mypy = "^0.910"
pylint = "^2.10.2"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
profile = "black"
src_paths = ["src"]
